Add Claude AI integration for document generation and route optimization
- Added ClaudeAIService with support for route optimization, document generation, and fleet insights
- Created ClaudeDocumentGenerator component for AI-powered document creation
- Created ClaudeRouteOptimizer component for intelligent route planning
- Updated AIAutomationDashboard with new Claude AI tabs
- Added Anthropic SDK dependency to package.json
- Created comprehensive Claude AI integration documentation
- Supports rate confirmations, bills of lading, route plans, and safety reports
- Includes shareable links and custom instructions for documents
- Natural language explanations for route optimization decisions

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.27.3",
     "@heroicons/react": "^2.2.0",
     "@next-auth/firebase-adapter": "^2.0.1",
     "@react-pdf/renderer": "^4.3.0",
